Dodanie komentarzy oraz przycisku opcji

--- a/app_p5.html
+++ b/app_p5.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <title>Pong Game</title>
     <link rel="Stylesheet" type="text/css" href="css/style_p5.css" />
+    <link rel="Shortcut icon" href="favicon.ico" />
   </head>
   <body>
+    <a id="a1">☜</a>
+    <div id="options">
+      <p>Prędkość paletek</p><button>+</button><button>-</button><br>
+      <p>Prędkość piłki</p><button>+</button><button>-</button><br>
+    </div>
     <script src="js/sketch.js"></script>
     <script src="js/p5.min.js"></script>
   </body>
