--- a/app_jq.html
+++ b/app_jq.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="Shortcut icon" href="favicon.ico" />
   </head>
   <body>
     <div id="container">
@@ -273,25 +274,6 @@ function aiPosition() {
 
 const move = (e) => {
   //console.log(e.keyCode)
-  //góra: 38, dół: 40,
-  switch(e.keyCode){
-  //strzałka w górę
-    case 38:
-      aiY = aiY - speed;
-      if(aiY < 0){
-        aiY = 0
-      }
-      break;
-  }
-  //strzałka w dół
-  switch(e.keyCode){
-    case 40:
-      aiY = aiY + speed;
-      if(aiY > ch - paddleHeight){
-        aiY = ch - paddleHeight;
-      }
-      break;
-  }
   //ruch w górę (W)
   switch(e.keyCode){
     case 87:
